[gd_scene load_steps=7 format=3 uid="uid://6no78pgvrpup"]

[ext_resource type="Script" uid="uid://csiby5wly7gc5" path="res://Scripts/arrow.gd" id="1_txh5x"]
[ext_resource type="Texture2D" uid="uid://de6lu6v7x24f8" path="res://Assets/Charakter/iron arrow.png" id="2_fa4mq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v7m7t"]
size = Vector2(19, 3)

[sub_resource type="Gradient" id="Gradient_obs8k"]
offsets = PackedFloat32Array(0.012987, 0.681818)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5yexr"]
gradient = SubResource("Gradient_obs8k")
width = 30
height = 30
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_4twg2"]

[node name="arrow" type="CharacterBody2D"]
script = ExtResource("1_txh5x")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_fa4mq")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_v7m7t")

[node name="Lifetime" type="Timer" parent="."]
wait_time = 2.0

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.5
texture = SubResource("GradientTexture2D_5yexr")

[node name="Searchradius" type="Area2D" parent="."]
scale = Vector2(1.68856, 1.44041)

[node name="SearchArea" type="CollisionShape2D" parent="Searchradius"]
scale = Vector2(2.17687, 2.06299)
shape = SubResource("CircleShape2D_4twg2")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]
[connection signal="body_entered" from="Searchradius" to="." method="_on_searchradius_body_entered"]
